--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Jaishree Mistry
+#title: Jaishree Mistry
 #logo: /assets/img/headshot.jpg
-description: about Jaishree
+#description: about Jaishree
 theme: jekyll-theme-minimal
